--- a/ticket.html
+++ b/ticket.html
@@ -5,8 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <script src="vendor/js/jquery.js" charset="utf-8"></script>
+  <script src="vendor/js/materialize.js" charset="utf-8"></script>
+  <!-- Styles -->
+  <link rel="stylesheet" href="vendor/css/materialize.css">
+  <link rel="stylesheet/less" type="text/css" href="css/master.less"/>
 </head>
 <body>
-
+  <section id="activation-code">
+    <div class="container">
+      <div class="logo">
+        <img src="images/Positive.png" alt="PositiveC">
+        <h1> - GCP</h1>
+      </div>
+      <h2>FRONTAPP v0.2</h2>
+      <h3 class="puid">GCP-ELGRENTE123</h3>
+      <div class="name">
+        <p> Nombre: </p>
+        <p class="name_get">Nissim Heffes</p>
+      </div>
+      <p>Código válido para evaluación GCP.
+      <br>
+      Todos los derechos reservados.
+      www.positivecompliance.com
+      </p>
+    </div>
+  </section>
+  <script src="vendor/js/less.js" charset="utf-8"></script>
+  <script src="js/main.js" charset="utf-8"></script>
 </body>
 </html>
